modix-kubernetes.yml
#csharp namespace
apiVersion: v1
kind: Namespace
metadata:
  name: csharp

---
#db-service

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: modix-db-service
  namespace: csharp
spec:
  ports:
  - name: modix-db
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: modix-db
  sessionAffinity: None
  type: ClusterIP

---
#db

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: modix-db
  name: modix-db
  namespace: csharp
spec:
  minReadySeconds: 40
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: modix-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: modix-db
    spec:
      containers:
      - env:
        - name: POSTGRESS_DB
          value: Modix
        image: postgres
        imagePullPolicy: Always
        name: modix-db
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: modix-db-pv
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: modix-db-pv
        persistentVolumeClaim:
          claimName: modix-db-pvc

---
#db admin service

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: modix-db-admin-service
  namespace: csharp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: modix-db-admin
  sessionAffinity: None
  type: ClusterIP

---
#db admin ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: modix-db-admin-ingress
  namespace: csharp
spec:
  rules:
  - host: modix-db.cisien.com
    http:
      paths:
      - backend:
          serviceName: modix-db-admin-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - modix-db.cisien.com
    secretName: modix-db-admin-tls-cert-prod

---
#db admin

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: modix-db-admin
  name: modix-db-admin
  namespace: csharp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: modix-db-admin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: modix-db-admin
    spec:
      containers:
      - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: change@me.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: CHANGEME
        image: dpage/pgadmin4
        imagePullPolicy: Always
        name: modix-db-admin
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
#modix-frontend-service

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: modix-frontend-service
  namespace: csharp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: modix-bot
  sessionAffinity: None
  type: ClusterIP

---
#modix-frontend-ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: modix-fe-ingress
  namespace: csharp
spec:
  rules:
  - host: mod.gg
    http:
      paths:
      - backend:
          serviceName: modix-frontend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - mod.gg
    secretName: modix-fe-tls-cert-prod

---
#modix

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: modix-bot
  name: modix-bot
  namespace: csharp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: modix-bot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: modix-bot
    spec:
      containers:
      - env:
        - name: DiscordToken
          valueFrom:
            secretKeyRef:
              key: discord-bot-token
              name: modix
        - name: DiscordClientId
          valueFrom:
            secretKeyRef:
              key: discord-client-id
              name: modix
        - name: DiscordClientSecret
          valueFrom:
            secretKeyRef:
              key: discord-client-secret
              name: modix
        - name: StackoverflowToken
          valueFrom:
            secretKeyRef:
              key: stackoverflow-token
              name: modix
        - name: MODIX_DB_CONNECTION
          valueFrom:
            secretKeyRef:
              key: modix-db-connection
              name: modix
        - name: log_webhook_id
          value: "382609729802862592"
        - name: log_webhook_token
          valueFrom:
            secretKeyRef:
              key: log-webhook-token
              name: modix
        image: cisien/modix:latest
        imagePullPolicy: Always
        name: modix
        volumeMounts:
        - mountPath: /app/secrets
          name: secrets
          readOnly: true
        - mountPath: /app/dataprotection
          name: modix-bot
          readOnly: false
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secrets
        secret:
          defaultMode: 420
          secretName: modix
      - name: modix-bot
        persistentVolumeClaim:
          claimName: modix-bot-pvc


---
#repl-service service

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: csdiscord-repl-service
  namespace: csharp
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 31337
    protocol: TCP
    targetPort: 31337
  selector:
    app: csdiscord-repl
  sessionAffinity: None
  type: ClusterIP

---
#network policy to isolate repl.
#todo: migrate 10.32.0.0 ipblock to podselector for k8s-app=kube-dns

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-repl-policy
  namespace: csharp
spec:
  podSelector:
    matchLabels:
      app: csdiscord-repl
  ingress:
  - from:
    - ipBlock:
       cidr: 0.0.0.0/0
  egress:
  - to:
    - ipBlock:
        cidr: 10.96.0.10/32
    - ipBlock:
        cidr: 10.32.0.0/24
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/24

---
#repl ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: repl-fe-ingress
  namespace: csharp
spec:
  rules:
  - host: eval.cisien.com
    http:
      paths:
      - backend:
          serviceName: csdiscord-repl-service
          servicePort: 31337
        path: /
  tls:
  - hosts:
    - eval.cisien.com
    secretName: csdiscord-repl-tls-cert-prod

---
#repl service

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: csdiscord-repl
  name: csdiscord-repl
  namespace: csharp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: csdiscord-repl
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 5
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: csdiscord-repl
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: ASPNETCORE_URLS
          value: http://+:31337
        image: cisien/csdiscord:linux
        imagePullPolicy: Always
        name: repl
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var
          name: var
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 33
        runAsUser: 33
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: var

---
#hastebin-service

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: hastebin-frontend-service
  namespace: csharp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7777
  selector:
    app: hastebin-frontend
  sessionAffinity: None
  type: ClusterIP

---
#hastebin-frontend-ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: hastebin-frontend-ingress
  namespace: csharp
spec:
  rules:
  - host: paste.mod.gg
    http:
      paths:
      - backend:
          serviceName: hastebin-frontend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - paste.mod.gg
    secretName: hastebin-fe-tls-cert-prod

---
#hastebin

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: hastebin-frontend
  name: hastebin-frontend
  namespace: csharp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hastebin-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hastebin-frontend
    spec:
      containers:
        - image: rlister/hastebin:latest
          imagePullPolicy: Always
          name: hastebin
          volumeMounts:
          - mountPath: /app/data
            name: hastebin-data
            readOnly: false
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hastebin-data
        persistentVolumeClaim:
          claimName: hastebin-pvc
